--- a/students/soft1714080902114/app/src/main/res/values/strings.xml
+++ b/students/soft1714080902114/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">轻笔记</string>
+    <string name="save_picture" />
 </resources>
